kube-prometheus-stack/grafana-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - 'grafana.hayden.com'
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
