kube-prometheus-stack/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtualservice
spec:
  gateways:
    - grafana-gateway
  hosts:
    - 'grafana.hayden.com'
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kube-prometheus-stack-grafana.kube-prometheus-stack.svc.cluster.local
            port:
              number: 80
